--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
   },
   "scripts": {
     "tailwind": "tailwind build src/styles/tailwind.src.css -c tailwind.js -o src/styles/tailwind.css",
-    "start": "npm run tailwind && node scripts/start.js",
-    "build": "npm run tailwind && node scripts/build.js",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
@@ -121,5 +121,9 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "glob-all": "^3.1.0",
+    "purgecss-webpack-plugin": "^1.4.0"
   }
 }
