--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-examples",
   "version": "0.1.0",
+  "homepage": "/build",
   "private": true,
   "dependencies": {
     "@babel/core": "7.1.6",
@@ -59,7 +60,10 @@
     "webpack": "4.19.1",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "3.6.3"
+    "workbox-webpack-plugin": "3.6.3",
+    "glob-all": "^3.1.0",
+    "purgecss-webpack-plugin": "^1.4.0",
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "tailwind": "tailwind build src/styles/tailwind.src.css -c tailwind.js -o src/styles/tailwind.css",
@@ -121,9 +125,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "devDependencies": {
-    "glob-all": "^3.1.0",
-    "purgecss-webpack-plugin": "^1.4.0"
   }
 }
