--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-examples",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://react-examples.sendoabll.com",
   "dependencies": {
     "@babel/core": "7.1.6",
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
